log
Thu 11 May 2023 04:32:36 PM UTC: 
 tests:  0|4
total_score: 0/70
6a46cc8
Thu 11 May 2023 04:40:42 PM UTC: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
c556716
Thu 11 May 2023 04:41:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7886ff9
Thu 11 May 2023 04:43:41 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
fbc304b
Thu 11 May 2023 04:47:17 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:56: error: ‘capac’ undeclared (first use in this function)
   39 |   h->heapArray = (heapElem*) malloc(sizeof(heapElem) * capac);
      |                                                        ^~~~~
heap.c:39:56: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
faab4ce
Thu 11 May 2023 04:47:29 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
524e325
Thu 11 May 2023 04:49:36 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
7d294e4
